{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 54,
  "lineage": "91273f01-2f39-6388-08d0-5d544d7f594b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:832737777587:internet-gateway/igw-0c8061c50e8b519cd",
            "id": "igw-0c8061c50e8b519cd",
            "owner_id": "832737777587",
            "tags": {
              "Name": "jomakori-poc-internet-gateway"
            },
            "tags_all": {
              "Name": "jomakori-poc-internet-gateway"
            },
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:loadbalancer/app/jomakori-poc-lb/5b106dcf0c4a94e3",
            "arn_suffix": "app/jomakori-poc-lb/5b106dcf0c4a94e3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jomakori-poc-lb-1718924717.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:832737777587:loadbalancer/app/jomakori-poc-lb/5b106dcf0c4a94e3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jomakori-poc-lb",
            "security_groups": [
              "sg-01041f723b4e3ac50"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06182b2a62d7d61d5"
              },
              {
                "subnet_id": "subnet-09508b94bc17e9d04"
              },
              {
                "subnet_id": "subnet-0988181dab5a02eb7"
              }
            ],
            "subnets": [
              "subnet-06182b2a62d7d61d5",
              "subnet-09508b94bc17e9d04",
              "subnet-0988181dab5a02eb7"
            ],
            "tags": {
              "Name": "jomakori-poc-lb"
            },
            "tags_all": {
              "Name": "jomakori-poc-lb"
            },
            "vpc_id": "vpc-008fdb13c388cec66",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:listener/app/jomakori-poc-lb/5b106dcf0c4a94e3/ff31fabd41c32236",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:targetgroup/example-tg-green/8623493ffbfb5295",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:832737777587:listener/app/jomakori-poc-lb/5b106dcf0c4a94e3/ff31fabd41c32236",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:loadbalancer/app/jomakori-poc-lb/5b106dcf0c4a94e3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.lb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:targetgroup/example-tg-green/8623493ffbfb5295",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:listener-rule/app/jomakori-poc-lb/5b106dcf0c4a94e3/ff31fabd41c32236/3ef669e800d85e0c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:832737777587:listener-rule/app/jomakori-poc-lb/5b106dcf0c4a94e3/ff31fabd41c32236/3ef669e800d85e0c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:listener/app/jomakori-poc-lb/5b106dcf0c4a94e3/ff31fabd41c32236",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_listener.this",
            "aws_lb_target_group.this",
            "aws_security_group.lb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:targetgroup/example-tg-green/8623493ffbfb5295",
            "arn_suffix": "targetgroup/example-tg-green/8623493ffbfb5295",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:832737777587:targetgroup/example-tg-green/8623493ffbfb5295",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-tg-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:832737777587:targetgroup/example-tg-blue/f393b130f38a3c7e",
            "arn_suffix": "targetgroup/example-tg-blue/f393b130f38a3c7e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:832737777587:targetgroup/example-tg-blue/f393b130f38a3c7e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-tg-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c8061c50e8b519cd",
            "id": "r-rtb-0c3dbe687c80a29961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c3dbe687c80a2996",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.this",
            "aws_vpc.this",
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:832737777587:route-table/rtb-0c3dbe687c80a2996",
            "id": "rtb-0c3dbe687c80a2996",
            "owner_id": "832737777587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8061c50e8b519cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jomakori-poc-route-table-public"
            },
            "tags_all": {
              "Name": "jomakori-poc-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beef957ccad546ea",
            "route_table_id": "rtb-0c3dbe687c80a2996",
            "subnet_id": "subnet-0988181dab5a02eb7"
          },
          "dependencies": [
            "aws_route_table.this",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba23789facdb506a",
            "route_table_id": "rtb-0c3dbe687c80a2996",
            "subnet_id": "subnet-09508b94bc17e9d04"
          },
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this",
            "aws_route_table.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6ef0fb69f1c0691",
            "route_table_id": "rtb-0c3dbe687c80a2996",
            "subnet_id": "subnet-06182b2a62d7d61d5"
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_route_table.this",
            "aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:832737777587:security-group/sg-0318e2871918b17a7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0318e2871918b17a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-ecs-traffic",
            "name_prefix": "",
            "owner_id": "832737777587",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:832737777587:security-group/sg-01041f723b4e3ac50",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01041f723b4e3ac50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": "",
            "owner_id": "832737777587",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:832737777587:subnet/subnet-0988181dab5a02eb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.0.0/21",
            "id": "subnet-0988181dab5a02eb7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "832737777587",
            "tags": {
              "Name": "us-west-2a"
            },
            "tags_all": {
              "Name": "us-west-2a"
            },
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:832737777587:subnet/subnet-09508b94bc17e9d04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.8.0/21",
            "id": "subnet-09508b94bc17e9d04",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "832737777587",
            "tags": {
              "Name": "us-west-2b"
            },
            "tags_all": {
              "Name": "us-west-2b"
            },
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:832737777587:subnet/subnet-06182b2a62d7d61d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.16.16.0/21",
            "id": "subnet-06182b2a62d7d61d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "832737777587",
            "tags": {
              "Name": "us-west-2c"
            },
            "tags_all": {
              "Name": "us-west-2c"
            },
            "vpc_id": "vpc-008fdb13c388cec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:832737777587:vpc/vpc-008fdb13c388cec66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a65e8615e4722c3b",
            "default_route_table_id": "rtb-04f8661c1e9cf3411",
            "default_security_group_id": "sg-0e7b441551bee5423",
            "dhcp_options_id": "dopt-09f50b61656a9dfd8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-008fdb13c388cec66",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04f8661c1e9cf3411",
            "owner_id": "832737777587",
            "tags": {
              "Name": "jomakori-poc-VPC"
            },
            "tags_all": {
              "Name": "jomakori-poc-VPC"
            }
          }
        }
      ]
    }
  ]
}